[project]
name = "flight-agent-sdk"
version = "0.1.0"
description = "A multi-turn flight booking agent using ClaudeSDKClient with a custom search_flights tool — the correct approach to conversational AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.2.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
]
